lab1/Test/L1-A-13-43.output
Error Type B at Line 12
Error Type B at Line 16
Error Type A at Line 17
Error Type B at Line 21
Error Type A at Line 21
Error Type B at Line 25
Error Type A at Line 36
Error Type B at Line 39
Error Type B at Line 41
Error Type A at Line 42
Error Type B at Line 44
Error Type B at Line 47
Error Type B at Line 48
Error Type A at Line 55
