lab1/Test/L1-A-13-43.cmm
struct aRhuJYob9DqFYQoK {
  int DEmJe = X1P11S4FmrpGvAUWaGQ = uibeUEMpARBTiBo 
    || Ol8Tka2qweLc8ZixFIqB && QiJsrN5k0QJg27S4zZg == 
    ikGL1YT [ jpWFmhCkZA3ET_Sq = BVLk8mbM = icl != mGOs5iYL_iMP668ea 
    + BvE ( _h6vdKc5l || R9u6ZWqU0_2_ - brKvU2k92uSLCM1 
    * ! - ry3zTCfrmE6ZzuWQeBEk [ qXnwKTJXBSN4A9tVSZfo 
    && o5W > ycOh6A + ! - ( L4S2hV0XPiRXJ && f6j7WwnoN1MuoHOb 
    <= ( T2mKG2niAw0Aul8EkIe && SZ8Rzh2XfEvXrciK < giZtf9dNehxgR5cn 
    - kd4j4dfkIxWtnm [ FL5f = I52GTh3qWu || - - Ul0aIfkENiyQmjmv2j 
    ( vXOMZCK_IPK8 , D_9Av ) ] - VBiwGm / - ( ! cdfVSXAIQABLZi40 
    ) ) . xNQbpibIsb7gxS6Un >= eup2Itf_HsPGU27bFq - - 
    - - 1064741201 ) ] - ) ] / ! - ! QXdDJ9fuSD ( ) . 
    VYFtMs * - 87179371.298790304 , J4GTLnPH9Kv_J ;
}C92twikmg [ 1573058307 ] , 

;
int gOunlIntQRm ( struct SNBC \IP7eLforjsl56i , int 
  exTzYCWCuPeH ) {
  if ( WNkYFyd ) {
    if ( feO )     if ( YyDhZgtJ )     Si 
else     if '( Nf3UbeqrA7 )     while ( ssxs73vVKHzmG5VC 
      )     while ( k1T )     bGjRMSDMd8KGEm_ ;


else     if YuTGbPZv )     lBubVkmf ;




  }else   return HOLB3WdKw0RNePQQp ;

}
float ;
int ;
int _CNmeE6SJ ( ) {
  int ZMWpJ5UlJB99Hv ^;
  int v0OKxwBKSMc458Xc ;
  bYL ;
  while ( ;c1YDteANTqROxv1 )   BPdPXpvqY ;

int }
struct `i9 EzTctbN ( ) {
  struct gI7 QGPrS1yS9snAMoa_ ;
  int Bh6GBwcNoYP3w >= ;
  int X1oybqaL ;
{
    ;
if   }}
int ;
int ;
int ;
int ;
struct {
  int GDg43j ;
$  int ExEttN9ekVl ;
};
